# ThumbnailMaker

backend/: config.py  database.db  database.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py
backend/services/: generator.py  google_image_service.py  imagekit_service.py
