[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "fastapi>=0.139.0",
    "google>=3.0.0",
    "google-genai>=2.10.0",
    "imagekitio>=5.7.0",
    "ipykernel>=7.3.0",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.39",
]
